# vcsu_2_censored_title

./: .gitignore  .gitmodules  README.md
cnc/: pyproject.toml
cnc/cnc/: __init__.py  devman.py  frontman.py  handlers.py  main.py  progman.py
cnc/programs/: blink.js  buttons.js  flyer.js  matrix.js  spinbox.js  syntax_err.js
cnc_ui/: README.md  pubspec.yaml
cnc_ui/lib/: main.dart  repo.dart
cnc_ui/linux/: CMakeLists.txt  my_application.cc
cnc_ui/test/: widget_test.dart
cnc_ui/web/: index.html  manifest.json
lab4/: lab4.ino  music.h
labXX/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
labXX/main/: CMakeLists.txt  bindings_gui.c  bindings_gui.cpp  bindings_io.cpp  bindings_timeout.c  bindings_timeout.cpp  display.c  display.h  gui.c  gui.cpp  gui.h  idf_component.yml  input.c  input.cpp  input.h  labXX.c  labXX.h  main.c  main.cpp  main.h  network.c  network.h  taskmgr.cpp  taskmgr.h  telemetry.cpp  telemetry.h
